err
proxy2.c:114:37: warning: incompatible pointer types passing 'struct sockaddr_in *' to parameter of type 'struct sockaddr *' [-Wincompatible-pointer-types]
    int browser_sock = accept(sock, (struct sockaddr_in *) (&browser_addr),
                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/sys/socket.h:681:45: note: passing argument to parameter here
int     accept(int, struct sockaddr * __restrict, socklen_t * __restrict)
                                                ^
proxy2.c:367:15: warning: implicit declaration of function 'proxy_req_forward' is invalid in C99 [-Wimplicit-function-declaration]
        ret = proxy_req_forward(conn);
              ^
proxy2.c:418:48: error: too few arguments to function call, expected 2, have 1
                    ret = handle_resp_html(conn);
                          ~~~~~~~~~~~~~~~~     ^
proxy2.c:68:1: note: 'handle_resp_html' declared here
static int handle_resp_html(proxy_conn_t *conn, const char *response);
^
proxy2.c:421:48: error: too few arguments to function call, expected 2, have 1
                    ret = handle_resp_html(conn);
                          ~~~~~~~~~~~~~~~~     ^
proxy2.c:68:1: note: 'handle_resp_html' declared here
static int handle_resp_html(proxy_conn_t *conn, const char *response);
^
proxy2.c:424:47: error: too few arguments to function call, expected 2, have 1
                    ret = handle_resp_f4m(conn);
                          ~~~~~~~~~~~~~~~     ^
proxy2.c:70:1: note: 'handle_resp_f4m' declared here
static int handle_resp_f4m(proxy_conn_t *conn, const char *response);
^
proxy2.c:427:49: error: too few arguments to function call, expected 2, have 1
                    ret = handle_resp_chunk(conn);
                          ~~~~~~~~~~~~~~~~~     ^
proxy2.c:72:1: note: 'handle_resp_chunk' declared here
static int handle_resp_chunk(proxy_conn_t *conn, const char *response);
^
proxy2.c:545:12: error: conflicting types for 'handle_resp_html'
static int handle_resp_html(proxy_conn_t *conn) {
           ^
proxy2.c:68:12: note: previous declaration is here
static int handle_resp_html(proxy_conn_t *conn, const char *response);
           ^
proxy2.c:556:12: error: conflicting types for 'handle_resp_f4m'
static int handle_resp_f4m(proxy_conn_t *conn) {
           ^
proxy2.c:70:12: note: previous declaration is here
static int handle_resp_f4m(proxy_conn_t *conn, const char *response);
           ^
2 warnings and 6 errors generated.
make: *** [proxy2.o] Error 1
